force-app/main/default/objects/media__c/media__c.object-meta.xml
<CustomObject>
    <label>media</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>