force-app/main/default/objects/media__c/fields/caption__c.field-meta.xml
<CustomField>
    <fullName>caption__c</fullName>
    <label>caption</label>
    <length>100</length>
    <type>Text</type>
</CustomField>