force-app/main/default/objects/media__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Options</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>media</relationshipLabel>
    <relationshipName>media</relationshipName>
    <type>Lookup</type>
</CustomField>