force-app/main/default/objects/media__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>