force-app/main/default/objects/media__c/fields/Video_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Video_Thumbnail__c</fullName>
    <label>Video Thumbnail</label>
    <type>Url</type>
</CustomField>