force-app/main/default/objects/media__c/validationRules/Caption_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Caption_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( caption__c ) ,
OR(DATEVALUE( CreatedDate ) &gt;=  DATE(2019,03,12), ISNEW() ))</errorConditionFormula>
    <errorMessage>Caption is now a mandatory requirement for all images</errorMessage>
</ValidationRule>